Fix padding on mobile blog view

--- a/assets/styles/layouts/_pages.scss
+++ b/assets/styles/layouts/_pages.scss
@@ -181,14 +181,11 @@ section.artist-box:nth-of-type(even) {
 
 article.post {
   border-bottom: 1px solid $gray-lighter;
+  padding: 25px 0;
 
   a {
     color: inherit;
     text-decoration: none;
-  }
-
-  @media(min-width: $screen-sm-min) {
-    padding: 25px 0;
   }
 
   header {
